src/test/deca/context/invalid/homemade/duplicate_parameter.deca
// trying to create parameter twice

class A {
    void x(int z, float z) {}
}